--- a/pagerank/pagerank.ipynb
+++ b/pagerank/pagerank.ipynb
@@ -4,7 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Imports"
+    "# Downloading Java From Command Line (Optional)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sudo apt update\n",
+    "!sudo apt install default-jre\n",
+    "!sudo apt install default-jdk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Python Imports"
    ]
   },
   {
@@ -24,7 +42,7 @@
     "try:\n",
     "    import psycopg2\n",
     "except:\n",
-    "    pip.main(['install','psycopg2'])\n",
+    "    pip.main(['install','psycopg2-binary'])\n",
     "    import psycopg2\n",
     "\n",
     "try:\n",
@@ -59,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Refresh the Materialized Views"
+    "# Reset Pagerank Results"
    ]
   },
   {
@@ -68,7 +86,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Refresh the materialized views\n",
     "try:\n",
     "    conn = psycopg2.connect(host=aws_creds[\"ENDPOINT\"], port=aws_creds[\"PORT\"],\n",
     "                            database=aws_creds[\"DBNAME\"], user=aws_creds[\"USR\"],\n",
@@ -211,8 +228,6 @@
     "prev_iter_ranks_sdf = spark.sql(initialize_ranks_query)\n",
     "prev_iter_ranks_sdf.createOrReplaceTempView(\"prev_iter_ranks\")\n",
     "\n",
-    "below = False\n",
-    "\n",
     "convergence = False\n",
     "i = 0\n",
     "while not convergence or i == 10000:\n",
@@ -221,10 +236,6 @@
     "\n",
     "    max_diff_df = spark.sql(max_diff_query).toPandas()\n",
     "    max_diff_result = pd.read_json(max_diff_df.to_json())\n",
-    "    \n",
-    "    if max_diff_result[\"max_diff\"][0] < 0.2 and not below:\n",
-    "        below = True\n",
-    "        print(\"Convergence Difference < 0.2 at iteration\", i)\n",
     "    \n",
     "    if max_diff_result[\"max_diff\"][0] < 0.1 or i == 9999:\n",
     "        convergence = True\n",
