domain cleanup/pagerank updates

--- a/pagerank/pagerank.ipynb
+++ b/pagerank/pagerank.ipynb
@@ -9,30 +9,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo apt update\n",
-    "!sudo apt install default-jre\n",
-    "!sudo apt install default-jdk"
+    "# !sudo apt update\n",
+    "# !sudo apt install default-jre\n",
+    "# !sudo apt install default-jdk"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Imports"
+    "# Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pip\n",
     "import json\n",
+    "\n",
     "try:\n",
     "    import pandas as pd\n",
     "except:\n",
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +92,7 @@
     "                            database=aws_creds[\"DBNAME\"], user=aws_creds[\"USR\"],\n",
     "                            password=aws_creds[\"password\"])\n",
     "    cur = conn.cursor()\n",
-    "    cur.execute(\"DROP TABLE IF EXISTS pagerank_results\")\n",
+    "    cur.execute(\"DROP TABLE IF EXISTS pagerank\")\n",
     "    cur.close()\n",
     "    conn.commit()\n",
     "    conn.close()\n",
@@ -108,49 +109,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Queries\n",
     "\n",
-    "cleaned_links_url_query = '''\n",
-    "    WITH ids AS (\n",
-    "        SELECT u1.id AS source, u2.id AS dest\n",
-    "        FROM links_url l JOIN urls u1 ON l.source=u1.url JOIN urls u2 ON l.dest=u2.url\n",
-    "    ), no_self_loops AS (\n",
-    "        SELECT i.source, i.dest\n",
-    "        FROM ids i\n",
-    "        WHERE i.source <> i.dest\n",
-    "    ), sinks AS (\n",
-    "        SELECT n1.dest AS sink\n",
-    "        FROM no_self_loops n1\n",
-    "        WHERE n1.dest NOT IN ( \n",
-    "            SELECT DISTINCT n2.source\n",
-    "            FROM no_self_loops n2\n",
+    "cleaned_links_domain_query = '''\n",
+    "    WITH sinks AS (\n",
+    "        SELECT DISTINCT d1.dest AS sink\n",
+    "        FROM domains d1\n",
+    "        WHERE d1.dest NOT IN ( \n",
+    "            SELECT DISTINCT d2.source\n",
+    "            FROM domains d2\n",
     "        )\n",
     "    ), back_edges AS (\n",
-    "        SELECT n.dest AS source, n.source AS dest\n",
-    "        FROM no_self_loops n JOIN sinks s ON n.dest = s.sink\n",
+    "        SELECT d.dest AS source, d.source AS dest\n",
+    "        FROM domains d JOIN sinks s ON d.dest = s.sink\n",
     "    )\n",
     "    SELECT b.source AS source, b.dest AS dest\n",
     "    FROM back_edges b\n",
     "        UNION\n",
-    "    SELECT n.source AS source, n.dest AS dest\n",
-    "    FROM no_self_loops n'''\n",
+    "    SELECT d.source AS source, d.dest AS dest\n",
+    "    FROM domains d'''\n",
     "\n",
     "out_weights_query = '''\n",
     "    SELECT c.source AS source, 1.0 / COUNT(*) AS out_weight\n",
-    "    FROM cleaned_links_url c\n",
+    "    FROM cleaned_links_domain c\n",
     "    GROUP BY c.source'''\n",
     "\n",
     "initialize_ranks_query = '''\n",
     "    SELECT DISTINCT(source) AS node, 1 AS rank\n",
-    "    FROM cleaned_links_url'''\n",
+    "    FROM cleaned_links_domain'''\n",
     "\n",
     "curr_iter_ranks_query = '''\n",
     "    SELECT l.dest AS node, SUM(o.out_weight * p.rank) * 0.85 + 0.15 AS rank\n",
-    "    FROM cleaned_links_url l JOIN out_weights o ON l.source = o.source \n",
+    "    FROM cleaned_links_domain l JOIN out_weights o ON l.source = o.source \n",
     "            JOIN prev_iter_ranks p ON l.source = p.node\n",
     "    GROUP BY l.dest'''\n",
     "\n",
@@ -166,7 +160,7 @@
     "        SELECT MAX(rank) - (SELECT * FROM min_rank) AS max_min_diff\n",
     "        FROM curr_iter_ranks\n",
     "    ) \n",
-    "    SELECT c.node AS id, (c.rank - (SELECT min_rank FROM min_rank)) / ((SELECT max_min_diff FROM max_minus_min)) AS rank\n",
+    "    SELECT c.node AS domain, (c.rank - (SELECT min_rank FROM min_rank)) / ((SELECT max_min_diff FROM max_minus_min)) AS rank\n",
     "    FROM curr_iter_ranks c'''"
    ]
   },
@@ -179,8 +173,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "jdbcUrl = \"jdbc:postgresql://\" + aws_creds[\"ENDPOINT\"] + \":\" + aws_creds[\"PORT\"] + \"/\" + \\\n",
@@ -190,6 +186,9 @@
     "        .appName('PageRank') \\\n",
     "        .master('local[*]') \\\n",
     "        .config(\"spark.driver.extraClassPath\", \"postgresql-42.2.20.jar\") \\\n",
+    "        .config('spark.executor.memory','10G') \\\n",
+    "        .config('spark.driver.memory','50G') \\\n",
+    "        .config('spark.memory.offHeap.size', '50G') \\\n",
     "        .getOrCreate()"
    ]
   },
@@ -202,17 +201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load data from RDS\n",
-    "cleaned_links_url_sdf = spark.read.format(\"jdbc\") \\\n",
+    "cleaned_links_domain_sdf = spark.read.format(\"jdbc\") \\\n",
     "        .option(\"url\", jdbcUrl) \\\n",
     "        .option(\"driver\", \"org.postgresql.Driver\") \\\n",
-    "        .option(\"query\", cleaned_links_url_query) \\\n",
+    "        .option(\"query\", cleaned_links_domain_query) \\\n",
     "        .load()\n",
-    "cleaned_links_url_sdf.createOrReplaceTempView(\"cleaned_links_url\")\n",
+    "cleaned_links_domain_sdf.createOrReplaceTempView(\"cleaned_links_domain\")\n",
     "\n",
     "out_weights_sdf = spark.sql(out_weights_query)\n",
     "out_weights_sdf.createOrReplaceTempView(\"out_weights\")"
@@ -220,9 +219,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration: 0 | Max Diff: 845.9791318516475945924\n",
+      "Iteration: 1 | Max Diff: 693.190419106111035\n",
+      "Iteration: 2 | Max Diff: 254.99580414864\n",
+      "Iteration: 3 | Max Diff: 207.9506068\n",
+      "Iteration: 4 | Max Diff: 81.458578\n",
+      "Iteration: 5 | Max Diff: 66.921434\n",
+      "Iteration: 6 | Max Diff: 26.403352\n",
+      "Iteration: 7 | Max Diff: 22.172474\n",
+      "Iteration: 8 | Max Diff: 8.546243\n",
+      "Convergence at iteration: 8\n"
+     ]
+    }
+   ],
    "source": [
     "# Actual PageRank\n",
     "prev_iter_ranks_sdf = spark.sql(initialize_ranks_query)\n",
@@ -230,26 +246,36 @@
     "\n",
     "convergence = False\n",
     "i = 0\n",
-    "while not convergence or i == 10000:\n",
+    "while not convergence:\n",
     "    curr_iter_ranks_sdf = spark.sql(curr_iter_ranks_query)\n",
     "    curr_iter_ranks_sdf.createOrReplaceTempView(\"curr_iter_ranks\")\n",
     "\n",
-    "    max_diff_df = spark.sql(max_diff_query).toPandas()\n",
-    "    max_diff_result = pd.read_json(max_diff_df.to_json())\n",
+    "    max_diff = spark.sql(max_diff_query).collect()[0].asDict()['max_diff']\n",
     "    \n",
-    "    if max_diff_result[\"max_diff\"][0] < 0.1 or i == 9999:\n",
+    "    print(\"Iteration:\", i, \"| Max Diff:\", max_diff)\n",
+    "    \n",
+    "    if max_diff < 0.5 or i == 8:\n",
     "        convergence = True\n",
     "        print(\"Convergence at iteration:\", i)\n",
     "        id_normalization_sdf = spark.sql(id_normalization_query)\n",
     "        id_normalization_sdf.write.format(\"jdbc\") \\\n",
     "                .option(\"url\", jdbcUrl) \\\n",
     "                .option(\"driver\", \"org.postgresql.Driver\") \\\n",
-    "                .option(\"dbtable\", \"pagerank_results\") \\\n",
+    "                .option(\"dbtable\", \"pagerank\") \\\n",
     "                .save()\n",
     "    else:\n",
+    "        spark.catalog.dropTempView(\"prev_iter_ranks\")\n",
     "        curr_iter_ranks_sdf.createOrReplaceTempView(\"prev_iter_ranks\")\n",
+    "        spark.catalog.dropTempView(\"curr_iter_ranks\")\n",
     "        i += 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
