--- a/pagerank/pagerank.ipynb
+++ b/pagerank/pagerank.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,18 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pip\n",
     "import json\n",
-    "\n",
-    "try:\n",
-    "    import pandas as pd\n",
-    "except:\n",
-    "    pip.main(['install','pandas'])\n",
-    "    import pandas as pd\n",
+    "import time\n",
     "\n",
     "try:\n",
     "    import psycopg2\n",
@@ -66,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +87,7 @@
     "                            database=aws_creds[\"DBNAME\"], user=aws_creds[\"USR\"],\n",
     "                            password=aws_creds[\"password\"])\n",
     "    cur = conn.cursor()\n",
-    "    cur.execute(\"DROP TABLE IF EXISTS pagerank\")\n",
+    "    cur.execute(\"DROP TABLE IF EXISTS pagerank_results\")\n",
     "    cur.close()\n",
     "    conn.commit()\n",
     "    conn.close()\n",
@@ -109,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,15 +148,18 @@
     "    FROM prev_iter_ranks p JOIN curr_iter_ranks c ON p.node = c.node'''\n",
     "\n",
     "id_normalization_query = '''\n",
-    "    WITH min_rank AS (\n",
-    "        SELECT MIN(rank) AS min_rank\n",
+    "    WITH stats1 AS (\n",
+    "        SELECT AVG(rank) AS avgR, STD(rank) AS stdR\n",
     "        FROM curr_iter_ranks\n",
-    "    ), max_minus_min AS (\n",
-    "        SELECT MAX(rank) - (SELECT * FROM min_rank) AS max_min_diff\n",
+    "    ), stand AS (\n",
+    "        SELECT node AS domain, (rank - (SELECT avgR FROM stats1)) / (SELECT stdR FROM stats1) AS rank\n",
     "        FROM curr_iter_ranks\n",
-    "    ) \n",
-    "    SELECT c.node AS domain, (c.rank - (SELECT min_rank FROM min_rank)) / ((SELECT max_min_diff FROM max_minus_min)) AS rank\n",
-    "    FROM curr_iter_ranks c'''"
+    "    ), stats2 AS (\n",
+    "        SELECT MIN(rank) AS minR, MAX(rank) AS maxR\n",
+    "        FROM stand\n",
+    "    )\n",
+    "    SELECT domain, (rank - (SELECT minR FROM stats2)) / (SELECT maxR - minR FROM stats2) AS rank\n",
+    "    FROM stand'''"
    ]
   },
   {
@@ -173,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -186,9 +184,8 @@
     "        .appName('PageRank') \\\n",
     "        .master('local[*]') \\\n",
     "        .config(\"spark.driver.extraClassPath\", \"postgresql-42.2.20.jar\") \\\n",
-    "        .config('spark.executor.memory','10G') \\\n",
-    "        .config('spark.driver.memory','50G') \\\n",
-    "        .config('spark.memory.offHeap.size', '50G') \\\n",
+    "        .config('spark.executor.memory','32G') \\\n",
+    "        .config('spark.driver.memory','32G') \\\n",
     "        .getOrCreate()"
    ]
   },
@@ -201,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,26 +216,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration: 0 | Max Diff: 845.9791318516475945924\n",
-      "Iteration: 1 | Max Diff: 693.190419106111035\n",
-      "Iteration: 2 | Max Diff: 254.99580414864\n",
-      "Iteration: 3 | Max Diff: 207.9506068\n",
-      "Iteration: 4 | Max Diff: 81.458578\n",
-      "Iteration: 5 | Max Diff: 66.921434\n",
-      "Iteration: 6 | Max Diff: 26.403352\n",
-      "Iteration: 7 | Max Diff: 22.172474\n",
-      "Iteration: 8 | Max Diff: 8.546243\n",
-      "Convergence at iteration: 8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Actual PageRank\n",
     "prev_iter_ranks_sdf = spark.sql(initialize_ranks_query)\n",
@@ -250,32 +230,28 @@
     "    curr_iter_ranks_sdf = spark.sql(curr_iter_ranks_query)\n",
     "    curr_iter_ranks_sdf.createOrReplaceTempView(\"curr_iter_ranks\")\n",
     "\n",
-    "    max_diff = spark.sql(max_diff_query).collect()[0].asDict()['max_diff']\n",
+    "    max_diff_sdf = spark.sql(max_diff_query)\n",
+    "    max_diff = max_diff_sdf.collect()[0].asDict()['max_diff']\n",
+    "    max_diff_sdf.unpersist()\n",
     "    \n",
     "    print(\"Iteration:\", i, \"| Max Diff:\", max_diff)\n",
     "    \n",
-    "    if max_diff < 0.5 or i == 8:\n",
+    "    if max_diff < .1 or i == 100:\n",
     "        convergence = True\n",
     "        print(\"Convergence at iteration:\", i)\n",
     "        id_normalization_sdf = spark.sql(id_normalization_query)\n",
     "        id_normalization_sdf.write.format(\"jdbc\") \\\n",
     "                .option(\"url\", jdbcUrl) \\\n",
     "                .option(\"driver\", \"org.postgresql.Driver\") \\\n",
-    "                .option(\"dbtable\", \"pagerank\") \\\n",
+    "                .option(\"dbtable\", \"pagerank_results\") \\\n",
     "                .save()\n",
     "    else:\n",
     "        spark.catalog.dropTempView(\"prev_iter_ranks\")\n",
     "        curr_iter_ranks_sdf.createOrReplaceTempView(\"prev_iter_ranks\")\n",
+    "        curr_iter_ranks_sdf.unpersist()\n",
     "        spark.catalog.dropTempView(\"curr_iter_ranks\")\n",
     "        i += 1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
