pagerank final small changes

--- a/pagerank/clean_urls.ipynb
+++ b/pagerank/clean_urls.ipynb
@@ -9,13 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo apt update\n",
-    "!sudo apt install default-jre\n",
-    "!sudo apt install default-jdk"
+    "# !sudo apt update\n",
+    "# !sudo apt install default-jre\n",
+    "# !sudo apt install default-jdk"
    ]
   },
   {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,14 +151,14 @@
     "        .config(\"spark.driver.extraClassPath\", \"postgresql-42.2.20.jar\") \\\n",
     "        .config(\"spark.network.timeout\", \"3700s\") \\\n",
     "        .config(\"spark.executor.heartbeatInterval\",\"3600s\") \\\n",
-    "        .config('spark.executor.memory','50G') \\\n",
-    "        .config('spark.driver.memory','50G') \\\n",
+    "        .config('spark.executor.memory','40G') \\\n",
+    "        .config('spark.driver.memory','75G') \\\n",
     "        .getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "<function __main__.<lambda>(url)>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
